overflow schedule page fixed

--- a/css/index.css
+++ b/css/index.css
@@ -1190,7 +1190,7 @@ footer img {
 
     .styled-table table th,
     .styled-table table td {
-        padding: 20px 25px;
+        padding: 20px 20px;
     }
 
     .day-note {
